--- a/MyUPC/templates/index.html
+++ b/MyUPC/templates/index.html
@@ -13,8 +13,8 @@
    <body>
 
     <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #dbd9d9;">
-            <img src="{%static '/Img/myupc.png' %}" width="90" height="90" class="d-inline-block align-top" alt="">
-            <a class="navbar-brand" href="#">    MyUPC</a>
+            <a href="{% url 'home' %}"><img src="{% static '/Img/myupc.png'%}" width="90" height="90" class="d-inline-block align-top" alt=""/></a>
+            <a class="navbar-brand" href="{% url 'home' %}">MyUPC</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
