--- a/MyUPC/templates/nextstep.html
+++ b/MyUPC/templates/nextstep.html
@@ -12,15 +12,15 @@
    <body>
 
     <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #dbd9d9;">
-            <img src="{% static '/Img/myupc.png'%}" width="90" height="90" class="d-inline-block align-top" alt="">
-            <a class="navbar-brand" href="#">    MyUPC</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <a href="{% url 'home' %}"><img src="{% static '/Img/myupc.png'%}" width="90" height="90" class="d-inline-block align-top" alt=""/></a>
+              <a class="navbar-brand" href="{% url 'home' %}">MyUPC</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="{% url 'home'%}">Calendar <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'home'%}">Calendar</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'todo'%}">ToDO's</a>
@@ -28,8 +28,8 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'grades'%}">MyGrades</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'nextstep'%}">NextStepAI</a>
+                <li class="nav-item active">
+                  <a class="nav-link" href="{% url 'nextstep'%}">NextStepAI <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'us'%}">About Us</a>
