--- a/MyUPC/templates/todo.html
+++ b/MyUPC/templates/todo.html
@@ -14,18 +14,18 @@
    <body>
 
     <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #dbd9d9;">
-            <img src="{% static '/Img/myupc.png'%}" width="90" height="90" class="d-inline-block align-top" alt="">
-            <a class="navbar-brand" href="#">    MyUPC</a>
+            <a href="{% url 'home' %}"><img src="{% static '/Img/myupc.png'%}" width="90" height="90" class="d-inline-block align-top" alt=""/></a>
+            <a class="navbar-brand" href="{% url 'home' %}">MyUPC</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="{% url 'home'%}">Calendar <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'todo'%}">ToDO's</a>
+                  <a class="nav-link" href="{% url 'home'%}">Calendar</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="{% url 'todo'%}">ToDO's <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'grades'%}">MyGrades</a>
@@ -51,11 +51,11 @@
     </div>
     
     <ul id="myUL">
-      <li>Hit the gym</li>
-      <li>Meet George</li>
-      <li>Buy eggs</li>
-      <li>Read a book</li>
-      <li>Organize office</li>
+      <li class="todo">Hit the gym</li>
+      <li class="todo">Meet George</li>
+      <li class="todo">Buy eggs</li>
+      <li class="todo">Read a book</li>
+      <li class="todo">Organize office</li>
     </ul>
         
             
